--- a/settings.json
+++ b/settings.json
@@ -119,7 +119,7 @@
         "fill": "none",
         "stroke": "#81a1c1",
         "font": "#eceff4",
-     },
+      },
       {
         "title": "Color 5",
         "fill": "none",
@@ -593,6 +593,46 @@
       ]
     },
     // VSCode Shortcuts
+    {
+      "before": [
+        "<Leader>",
+        "c",
+        "d"
+      ],
+      "commands": [
+        "editor.action.showHover"
+      ]
+    },
+    {
+      "before": [
+        "<Leader>",
+        "c",
+        "D"
+      ],
+      "commands": [
+        "workbench.action.tasks.toggleProblems"
+      ]
+    },
+    {
+      "before": [
+        "<Leader>",
+        "g",
+        "d"
+      ],
+      "commands": [
+        "editor.action.revealDefinition"
+      ]
+    },
+    {
+      "before": [
+        "<Leader>",
+        "x",
+        "x"
+      ],
+      "commands": [
+        "workbench.action.debug.run"
+      ]
+    },
     {
       "before": [
         "<Leader>",
